Update margin symbols, fix code wrapping in print

--- a/src/config/slides.scss
+++ b/src/config/slides.scss
@@ -2,7 +2,7 @@
 
 $page-margin-x: 100px;
 $page-margin-y: 0;
-$page-max-width: 1920px;
+$page-max-width: 100%;
 $page-background: $color-gray-dark;
 $page-foreground: $color-gray-light;
 $page-font: $font-sans-serif;
